# tgtoolz

./: .gitignore  pyproject.toml  readme.md
tgtoolz/: cli.py  config.py
tgtoolz/i18n/: constants.py  generator.py  impl.py  lang_parser.py  nodes.py
